--- a/public/templates/eventContacts.html
+++ b/public/templates/eventContacts.html
@@ -47,7 +47,7 @@
     <form class="form-inline">
         <div class="form-group" novalidate ng-submit='search()'>
             <label for='searchTerm' class='control-label'>Suchbegriff: </label>
-            <input type="text" ng-model='searchTerm' class="form-control" id="searchTerm" />
+            <input type="text" ng-model='searchTerm' class="form-control" id="searchTerm" szn-autocomplete='options' highlight-first="true" />
         </div>
         <button type="submit" ng-click="add()" class="btn btn-success btn-default">Hinzufügen</button>
     </form>
