--- a/public/templates/eventContacts.html
+++ b/public/templates/eventContacts.html
@@ -34,9 +34,17 @@
             </div>
         </div>
         <div class='form-group' ng-class='{ "has-error": contactForm.type.$invalid }'>
-            <label for='type' class='control-label col-sm-2'>Type: </label>
+            <label for='type' class='control-label col-sm-2'>Rolle: </label>
             <div class='col-sm-8'>
-                <input type='text' ng-model='type' class='form-control' id='type' required maxlength='120' />
+                <select ng-model="role">
+                    <option value="TeamleiterIn">TeamleiterIn</option>
+                    <option value="TeamleiterIn 24h">TeamleiterIn 24h</option>
+                    <option value="TeamleiterIn 0.5">TeamleiterIn 0.5</option>
+                    <option value="BetreuerIn">BetreuerIn</option>
+                    <option value="BetreuerIn 24h">BetreuerIn 24h</option>
+                    <option value="PraktikantIn">PraktikantIn</option>
+                    <option value="PraktikantIn 24h">PraktikantIn 24h</option>
+                </select>
             </div>
         </div>
         <button type='submit' class="btn btn-success btn-default col-sm-4">Neu & Hinzufügen</button>
@@ -48,19 +56,27 @@
         <div class="form-group" novalidate ng-submit='search()'>
             <label for='searchTerm' class='control-label'>Suchbegriff: </label>
             <input type="text" ng-model='searchResult' class="form-control" id="searchTerm" szn-autocomplete='options' highlight-first="true" />
+            <label for="role" class="control-label">Rolle: </label>
+            <select ng-model="contactRole">
+                <option value="TeamleiterIn">TeamleiterIn</option>
+                <option value="TeamleiterIn 24h">TeamleiterIn 24h</option>
+                <option value="TeamleiterIn 0.5">TeamleiterIn 0.5</option>
+                <option value="BetreuerIn">BetreuerIn</option>
+                <option value="BetreuerIn 24h">BetreuerIn 24h</option>
+                <option value="PraktikantIn">PraktikantIn</option>
+                <option value="PraktikantIn 24h">PraktikantIn 24h</option>
+            </select>
         </div>
         <button type="submit" ng-click="addContact()" class="btn btn-success btn-default">Hinzufügen</button>
     </form>
     <br />
 
     <div class="list-group">
-        <div ng-repeat='contact in assignedContacts' class="list-group-item list-group-item-warning">
-            <!--<a href="/#/userRolesUpdate/{{user._id}}" class="invisible-ling text-warning">-->
+        <div ng-repeat='contactRel in assignedContacts' class="list-group-item list-group-item-warning">
                 <span class="glyphicon glyphicon-user" style="margin-right:3px;"></span>
-                <span class="list-group-item-heading"><strong>{{contact.lastName}} {{contact.firstName}}</strong></span>
+                <span class="list-group-item-heading"><strong>{{contactRel.contact.lastName}} {{contactRel.contact.firstName}}</strong></span>
                 <span class="glyphicon glyphicon-remove pull-right" style="margin-bottom:15px" ng-show="iSvc.isAuthorized('admin')" ng-click="removeContact(contact._id)"></span>
-                <p class="list-group-item-text">{{contact.type}} | Email: {{contact.email}} | Tel: {{contact.phoneNumber}}</p>
-            <!--</a>-->
+                <p class="list-group-item-text">{{contactRel.role}} | Email: {{contactRel.contact.email}} | Tel: {{contactRel.contact.phoneNumber}}</p>
         </div>
     </div>
 
@@ -68,10 +84,10 @@
         <div ng-repeat="activity in activityContacts" class="list-group-item disabled">
             <span class="glyphicon glyphicon-calendar" style="margin-right:3px"></span>
             <span class="list-group-item-heading"><strong>{{activity.name}}</strong></span>
-            <div ng-repeat="contact in activity.contacts" class="list-group-item list-group-item-warning">
+            <div ng-repeat="contactRel in activity.contactRels" class="list-group-item list-group-item-warning">
                 <span class="glyphicon glyphicon-user" style="margin-right:3px"></span>
-                <span class="list-group-item-heading"><strong>{{contact.lastName}} {{contact.firstName}}</strong></span>
-                <p class="list-group-item-text">{{contact.type}} | Email: {{contact.email}} | Tel: {{contact.phoneNumber}}</p>
+                <span class="list-group-item-heading"><strong>{{contactRel.contact.lastName}} {{contactRel.contact.firstName}}</strong></span>
+                <p class="list-group-item-text">{{contactRel.role}} | Email: {{contactRel.contact.email}} | Tel: {{contactRel.contact.phoneNumber}}</p>
             </div>
         </div>
     </div>
