--- a/public/templates/eventContacts.html
+++ b/public/templates/eventContacts.html
@@ -40,10 +40,12 @@
                     <option value="TeamleiterIn">TeamleiterIn</option>
                     <option value="TeamleiterIn 24h">TeamleiterIn 24h</option>
                     <option value="TeamleiterIn 0.5">TeamleiterIn 0.5</option>
+                    <option value="TeamleiterIn 24h 0.5">TeamleiterIn 24h 0.5</option>
                     <option value="BetreuerIn">BetreuerIn</option>
                     <option value="BetreuerIn 24h">BetreuerIn 24h</option>
                     <option value="PraktikantIn">PraktikantIn</option>
                     <option value="PraktikantIn 24h">PraktikantIn 24h</option>
+                    <option value="Andere">Andere</option>
                 </select>
             </div>
         </div>
@@ -61,10 +63,12 @@
                 <option value="TeamleiterIn">TeamleiterIn</option>
                 <option value="TeamleiterIn 24h">TeamleiterIn 24h</option>
                 <option value="TeamleiterIn 0.5">TeamleiterIn 0.5</option>
+                <option value="TeamleiterIn 24h 0.5">TeamleiterIn 24h 0.5</option>
                 <option value="BetreuerIn">BetreuerIn</option>
                 <option value="BetreuerIn 24h">BetreuerIn 24h</option>
                 <option value="PraktikantIn">PraktikantIn</option>
                 <option value="PraktikantIn 24h">PraktikantIn 24h</option>
+                <option value="Andere">Andere</option>
             </select>
         </div>
         <button type="submit" ng-click="addContact()" class="btn btn-success btn-default">Hinzufügen</button>
