new iban for kiso

--- a/public/templates/agbEdit.html
+++ b/public/templates/agbEdit.html
@@ -46,7 +46,7 @@
 		<li><strong>Teilnahmebeitrag</strong>
 			<ul>
 				<li><strong>Beitragshöhe und Zahlungsmodalitäten</strong>
-					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche. Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 21 O 08081 11605 000305003229) eingezahlt werden.</p>
+					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche. Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 58 J 08081 11600 000305003229) eingezahlt werden.</p>
 				</li>
 				<li><strong>Zahlungsfrist</strong>
 					<p>Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen innerhalb von fünf Werktagen ab Versand der Zahlungsaufforderung eingezahlt werden. Bei der Überweisung muss als Einzahlungsgrund „KISO 2017“ und der Name der TeilnehmerInnen angegeben werden. Die Anmeldung ist erst mit dem Eingang des vollen Teilnahmebeitrages gültig, nach Ablauf der Zahlungsfrist wird das Kind ohne zusätzlicher Zahlungsaufforderung auf die Warteliste gesetzt.</p>
@@ -92,7 +92,7 @@
 		<li><strong>Quota d’iscrizione</strong>
 			<ul>
 				<li><strong>Importo e modalitá di pagamento</strong>
-					<p>La quota d’iscrizione ammonta a 80,00 Euro per settimana. Per l’iscrizione di ogni successivo frattello/sorella alla medesima settimana verrà concesso uno sconto di 10,00 euro. La quota deve essere versata tramite bonifico bancario sul conto corrente intestato allo Jugenddienst Bozen (Cassa rurale di Bolzano, IBAN: IT 21 O 08081 11605 000305003229).</p>
+					<p>La quota d’iscrizione ammonta a 80,00 Euro per settimana. Per l’iscrizione di ogni successivo frattello/sorella alla medesima settimana verrà concesso uno sconto di 10,00 euro. La quota deve essere versata tramite bonifico bancario sul conto corrente intestato allo Jugenddienst Bozen (Cassa rurale di Bolzano, IBAN: IT 58 J 08081 11600 000305003229).</p>
 				</li>
 				<li><strong>Scadenza di pagamento</strong>
 					<p>La quota d’iscrizione deve essere versata tramite bonifico bancario sul conto corrente dello Jugenddienst Bozen entro cinque giorni lavorativi dall’invio dell’avviso di pagamento. Come causale nel bonifico deve essere inserito „KISO 2017“ con il nome del/la partecipante. L’iscrizione é soltante valida dal momento dell’accredito della intera quota d’isrizione. Scaduto il termine di pagamento, il /la figlio/a iscritto sará spostato/a sulla lista d’attesa, senza ulteriore avviso di pagamento.</p>
