introduce jump&run type for kiso

--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -40,6 +40,7 @@
 				<option value='music'>Jungbläserwoche</option>
 				<option value='club'>Jugendtreff</option>
 				<option value='spiritnight'>Spiritnight</option>
+				<option value='jumprun'>Jump&Run</option>
 			</select>
 		</div>
 	</div>
