--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -20,6 +20,7 @@
 						<span ng-show='event.type === "music"' class='glyphicon glyphicon-music'></span>
 						<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
 						<span ng-show='event.type === "club"' class='glyphicon glyphicon-home'></span>
+						<span ng-show='event.type === "jumprun"' class='glyphicon glyphicon-refresh'></span>
 					</a>
 				</div>
 				</div>
