--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -28,6 +28,7 @@
                 <span ng-show='t === "music"' class='glyphicon glyphicon-music pull-left' style='font-size:25px;margin-right:10px'></span>
                 <span ng-show='t === "spiritnight"' class='glyphicon glyphicon-education pull-left' style='font-size:25px;margin-right:10px'></span>
                 <span ng-show='t === "club"' class='glyphicon glyphicon-home pull-left' style='font-size:25px;margin-right:10px'></span>
+                <span ng-show='t === "jumprun"' class='glyphicon glyphicon-refresh pull-left' style='font-size:25px;margin-right:10px'></span>
             </div>
         </div>
         </a>
