--- a/public/templates/payment.html
+++ b/public/templates/payment.html
@@ -25,28 +25,38 @@
 
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 	<table class='table table-striped table-bordered tbl-serial3'>
+		<thead>
 		<tr>
-			<th>Programm</th>
-			<th>Woche</th>
-			<th>Vorname</th>
 			<th>Nachname</th>
-			<th>Type</th>
+			<th>Vorname</th>
+			<th>Von</th>
+			<th>Bis</th>
+			<th>Woche</th>
+			<th>Programm</th>
+			<th>Rolle</th>
+			<th>Betrag</th>
 			<th>Email</th>
 			<th>Tel</th>
 		</tr>
-		<tr ng-repeat='reg in registrations | orderBy:colNameSort'>
-			<td>{{reg.activityId.eventId.location}} - {{reg.activityId.eventId.name}}</td>
-			<td>{{reg.activityId.name}}</td>
-			<td>{{reg.firstNameChild}}</td>
-			<td>{{reg.lastNameChild}}</td>
-			<td></td>
-			<td><a href='mailto:{{reg.emailParent}}'>{{reg.emailParent}}</a></td>
-			<td>{{reg.phoneNumberParent}}</td>
+		</thead>
+		<tbody>
+		<tr ng-repeat='rel in relations'>
+			<td>{{rel.lastName}}</td>
+			<td>{{rel.firstName}}</td>
+			<td>{{rel.startDate | date: 'dd/MM/yyyy'}}</td>
+			<td>{{rel.endDate | date: 'dd/MM/yyyy'}}</td>
+			<td>{{rel.activityName}}</td>
+			<td>{{rel.eventName}}</td>
+			<td>{{rel.type}}</td>
+			<td>{{rel.amount}}</td>
+			<td>{{rel.email}}</td>
+			<td>{{rel.phoneNumber}}</td>
 		</tr>
+		</tbody>
 	</table>
     <br />
-    <div class='col-sm-6'>
+    <!--<div class='col-sm-6'>
         <label for='uniqueEmail'><strong>Email-Adressen Kontakte:</strong></label>
         <textarea name='uniqueEmail' type='text' rows='4' class='form-control' ng-model='emails'></textarea>
-    </div>
+    </div>-->
 </div>
