--- a/public/templates/payment.html
+++ b/public/templates/payment.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
-	<table class='table table-striped table-bordered tbl-serial3'>
+	<table class='table table-striped table-bordered'>
 		<thead>
 		<tr>
 			<th>Nachname</th>
@@ -48,15 +48,28 @@
 			<td>{{rel.activityName}}</td>
 			<td>{{rel.eventName}}</td>
 			<td>{{rel.type}}</td>
-			<td>{{rel.amount}}</td>
+			<td align="right">{{rel.amount}}</td>
 			<td>{{rel.email}}</td>
 			<td>{{rel.phoneNumber}}</td>
 		</tr>
 		</tbody>
+		<tfoot>
+			<td align="right" colspan="7"><strong>Summe:</strong></td>
+			<td align="right">{{sumAmount}}</td>
+			<td colspan="2"></td>
+		</tfoot>
 	</table>
     <br />
-    <!--<div class='col-sm-6'>
-        <label for='uniqueEmail'><strong>Email-Adressen Kontakte:</strong></label>
-        <textarea name='uniqueEmail' type='text' rows='4' class='form-control' ng-model='emails'></textarea>
-    </div>-->
+    <div class='col-sm-6'>
+        <label for='uniqueEmailLeader'><strong>Email-Adressen Teamleiter:</strong></label>
+        <textarea name='uniqueEmailLeader' type='text' rows='4' class='form-control' ng-model='emailsLeader'></textarea>
+    </div>
+	<div class='col-sm-6'>
+        <label for='uniqueEmailCaregiver'><strong>Email-Adressen Betreuer:</strong></label>
+        <textarea name='uniqueEmailCaregiver' type='text' rows='4' class='form-control' ng-model='emailsCaregiver'></textarea>
+    </div>
+	<div class='col-sm-6'>
+        <label for='uniqueEmailTrainee'><strong>Email-Adressen Praktikanten:</strong></label>
+        <textarea name='uniqueEmailTrainee' type='text' rows='4' class='form-control' ng-model='emailsTrainee'></textarea>
+    </div>
 </div>
