start commitment search

--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -8,11 +8,17 @@
 		<div class='row'>
 			<div class='col-sm-9 input-group'>
 				<div class='col-sm-5'>
+				<label for='eventFilter'>Progr:</label>
 				<select id='eventFilter' class='form-control' ng-model='eventIdFilter' ng-change="updateEventFilter()">
 					<option ng-repeat='event in events' value='{{event._id}}'>{{event.name}}</option>
 				</select>
+				</div>
+				<div class='col-sm-5'>
+				<label for='amountFilter'>Betrag</label>
+				<input id='amountFilter' type='number' class='form-control' ng-model='amountFilter'>
+				</div>
 			</div>
-			<div class='col-sm-3'>
+			<div class='col-sm-3' style='margin-top: 3px; margin-bottom: 3px'>
 				<button type='button' class='btn btn-primary btn-block' ng-click='loadCommitmentsByEvent()'>Laden</button>
 			</div>
 		</div>
