--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -116,6 +116,15 @@
 			</p>
 		</div>
 	</div>
+	<!-- FEEPERWEEK -->
+	<div class='form-group' ng-class='{ "has-error": eventForm.feePerWeek.$invalid }'>
+			<label for='feePerWeek' class='control-label col-sm-2'>Preis (pro Woche)</label>
+			<div class='col-sm-10'>
+				<p class='input-group'>
+					<input type='number' ng-model='feePerWeek' step='0.01' required></input>
+				</p>
+			</div>
+	</div>	
 	<!-- INFO -->
 	<div class='form-group' ng-class='{ "has-error": eventForm.info.$invalid }'>
 		<label for='info' class='control-label col-sm-2'>Info</label>
@@ -139,7 +148,7 @@
 			</p>
 		</div
 	</div>
-
+	<br />
 	<div class='col-sm-offset-2 col-sm-10'>
 		<input class='btn btn-success bnt-lg btn-block' type='submit' value='Speichern' ng-disabled='eventForm.$invalid'>
 	</div>
