--- a/public/templates/header/login.html
+++ b/public/templates/header/login.html
@@ -1,4 +1,6 @@
-<div class='navbar-right' ng-controller='LoginCtrl'>
+<div class='navbar-right'
+	 ng-controller='LoginCtrl'
+	 style='padding-left:15px;padding-right:15px;margin-right:10px'>
 	<form class='navbar-form' ng-hide='identity.isAuthenticated()'>
 		<div class='form-group'>
 			<input id='login_user' type='text' class='form-control' ng-model='username' placeholder='User'>
@@ -6,16 +8,16 @@
 		<div class='form-group'>
 			<input id='login_pwd' type='password' class='form-control' ng-model='password' placeholder='Passwort'>
 		</div>
-		<button class='btn btn-warning' ng-click='signin(username, password)'>{{'LOGIN.LOGIN' | translate}}</button>
-		<a id='login_newUser' href='/#/user' class='btn btn-warning' role='button'>{{'LOGIN.NEW' | translate}}</a>
-		<br />
+		<button class='btn btn-warning' ng-click='signin(username, password)'><span class='glyphicon glyphicon-user'></span> {{'LOGIN.LOGIN' | translate}}</button>
+		<a id='login_newUser' href='/#/user' class='btn btn-warning' role='button'><span class='glyphicon glyphicon-log-in'></span> </span>{{'LOGIN.NEW' | translate}}</a>
+		<!-- <br /> -->
 		<a href='/#/userToken' class='btn btn-link' role='button'>{{'LOGIN.PWDNEW' | translate}}</a>
 	</form>
 
 	<ul class='nav navbar-nav navbar-right' ng-show='identity.isAuthenticated()'>
 		<li class='dropdown'>
 		<a href='' data-toggle='dropdown'>
-			<span id='login_curUser'>{{identity.currentUser.firstName + ' ' + identity.currentUser.lastName}}</span>
+			<span id='login_curUser'><span class='glyphicon glyphicon-user'></span> {{identity.currentUser.firstName + ' ' + identity.currentUser.lastName}}</span>
 		</a><b class='caret-right'></b>
 		<ul class='dropdown-menu'>
 			<li>
