--- a/public/templates/agbEdit.html
+++ b/public/templates/agbEdit.html
@@ -114,7 +114,7 @@
 	</ol>
 	<div class='col-sm-12'>
 		<a ng-show="activityId === '1'" href='/#/' class='btn btn-warning' role='button'>indietro</a>
-		<a ng-show="activityId !== '1'" href='/#/registration/{{activityId}}?type={{type}}' class='btn btn-warning' role='button'>indietro</a>
+		<a ng-show="activityId !== '1'" href='/#/registration/{{eventId}}?type={{type}}' class='btn btn-warning' role='button'>indietro</a>
 	</div>
 </div>
 </div>
