--- a/public/templates/agbEdit.html
+++ b/public/templates/agbEdit.html
@@ -2,13 +2,26 @@
 <div ng-show="!isKiso">
 <h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
 <div ng-show='type === "summer" || type === "music" || type === "club"'>
-	<ol>
-	<li>Die Eltern bzw. Erziehungsberechtigten &uuml;bernehmen die Verantwortung f&uuml;r den Hin- und R&uuml;ckweg des Kindes zu den jeweiligen Programmen. Untertags werden die Jugendlichen von den Betreuer/innen beaufsichtigt.</li>
-	<li>Versicherung: Alle Teilnehmer/innen sind &uuml;ber die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert.</li>
-	<li>Kostenr&uuml;ckerstattung nur bei Krankheit mit Vorlage des &auml;rztlichen Zeugnisses.</li>
-	<li>Die Eltern bzw. Erziehungsberechtigten erkl&auml;ren sich mit Disziplinar-ma&szlig;nahmen der Betreuer/innen einverstanden: Bei wiederholten Verst&ouml;&szlig;en gegen Vereinbarungen und nach R&uuml;cksprache mit dem Elternhaus werden die Jugendlichen nach Hause geschickt.</li>
-	<li>Aufgrund der Privacy-Bestimmungen sind wir verpflichtet, die Eltern um Erlaubnis zu fragen, Fotos und Videos von den Kindern machen zu d&uuml;rfen und einzelne davon im Sinne der T&auml;tigkeit des Vereins (z.B. Presseaussendungen, Informationsbrosch&uuml;ren, Internetauftritte) ver&ouml;ffentlichen zu d&uuml;rfen.</li>
-	</ol>
+	<ul>
+		<li>Nach erfolgreicher digitalen Anmeldung ist die Bezahlung verpflichtend. Zudem ist eine Abmeldung oder R&uuml;ckerstattung des Teilnehmerbetrages aus organisatorischen Gr&uumlnden nicht mehr m&ouml;glich. Krankheitsbedingt wird gegen Vorlage eines &auml;rztlichen Zeugnisses (innerhalb von 5 Tagen) die gesamte Teilnahmegeb&uuml;hr zurückerstattet.</li>
+		<li>Die Eltern bzw. Erziehungsberechtigten &uuml;bernehmen die Verantwortung für den Hin- und Rückweg des Kindes zu den jeweiligen Programmen. Untertags werden die Jugendlichen von den Betreuer/innen beaufsichtigt.</li>
+		<li>Versicherung: Alle Teilnehmer/innen sind &uuml;ber die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert.</li>
+		<li>Die Eltern bzw. Erziehungsberechtigten erkl&auml;ren sich mit Disziplinarmaßnahmen der Betreuer/innen einverstanden: Bei wiederholten Verst&ouml;ßen gegen Vereinbarungen und nach R&uuml;cksprache mit dem Elternhaus werden die Jugendlichen nach Hause geschickt.</li>
+		<li>EINWILLIGUNG ZUR VER&Ouml;FFENTLICHUNG VON FOTOS UND VIDEOAUFNAHMEN: Wir informieren hiermit ausdr&uumlcklich, dass im Laufe der Sommerferienprogramme von den Teilnehmern Bilder in digitaler und herk&ouml;mmlicher Form  sowie Videoaufnahmen, von erm&auml;chtigten Mitarbeitern des Jugenddienstes gemacht werden und diese Bilder und Filme ausschließlich im Sinne der T&auml;tigkeit des Jugenddienstes, in Presseaussendungen, Internetauftritten und Bildershows verwendet, ver&ouml;ffentlicht und verbreitet werden. Mit seiner Zustimmung best&aumltigt der erm&auml;chtigte Elternteil, die hier angef&uuml;hrte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdr&uuml;cklich zu erm&auml;chtigen, die Bilder und Aufnahmen zu den besagten Zwecken, kostenlos zu verwenden.</li>
+		<li>DATENSCHUTZ: Mit der Anmeldung wird das Einverst&auml;ndnis zur allgemeinen Verarbeitung der pers&ouml;nlichen Daten im Rahmen der Verwaltung der Veranstaltung im Sinne der geltenden Datenschutzbestimmungen laut L.D. 196/2003 erteilt. Mitteilung im Sinne des Art. 13 des Legislativdekretes Nr. 196/03:S&auml;mtliche von Ihnen erhobenen Daten werden ausschließlich für interne Zwecke verarbeitet und für Rundschreiben sowie für die Erstellung der Teilnehmerlisten bei den Sommerferienprogrammen verwendet. Mit seiner Anmeldung best&auml;tigt der erm&auml;chtigte Elternteil/User, die hier angef&uml;hrte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdr&uuml;cklich zu erm&auml;chtigen, die pers&ouml;nlichen Daten zu den besagten Zwecken, zu verwenden.</li>
+	</ul>
+	<br />
+	<h2 class='text-orange'>Allgemeine Infos zu den Programmen:</h2>
+	<ul>
+		<li>Verpflegung, Materialspesen, usw. sind im jeweiligen TeilnehmerInnen Preis enthalten (Die Preise stehen beim jeweiligen Programm dabei). Die Preise variieren nach Gemeinde/Programm, da die jeweiligen Gemeinden die Sommerprogramme unterschiedlich finanziell unterst&uumltzen.</li>
+		<li>TeilnehmerInnen d&uuml;rfen sich  grunds&auml;tzlich nur bei den Sommerprogrammen in ihrer Wohnsitzgemeinde anmelden. Ausnahmen bilden die Programme, die offen f&uuml;r alle sind. Diese Programme befinden sich im letzten Teil der Brosch&uumlre.</li>
+		<li>TeilnehmerInnen m&uuml;ssen im Einzugsgebiet des Jugenddienstes Bozen-Land ans&auml;ssig sein.</li>
+		<li>Finanziert werden die Sommerprogramme von der jeweiligen Gemeinde, der Familienagentur des Landes S&uuml;dtirol, Sponsoren und dem Jugenddienst Bozen-Land.</li>
+		<li>Versicherung: Alle TeilnehmerInnen sind über die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert.</li>
+		<li>Eine Kostenr&uuml;ckerstattung gibt es nur bei Krankheit mit Vorlage eines &auml;rztlichen Zeugnisses.</li>
+		<li>Die TeilnehmerInnen erhalten bei einer Spende von 10 Euro einen Jugenddienststick (4GB) mit allen Fotos des jeweiligen Programmes! Die Sticks d&uuml;rfen behalten werden! Es d&uuml;rfen auch Jugenddienststicks vom letzten Jahr verwendet werden. Diese m&uuml;ssen leer sein und am Anfang des jeweiligen Programmes den BetreuerInnen übergeben werden.</li>
+		<li>KINDER MIT BESONDEREM BETREUUNGSAUFWAND: Dem Jugenddienst Bozen-Land ist es ein großes Anliegen auch Kinder mit k&ouml;rperlicher/geistiger Beeintr&auml;chtigung in die Programme zu integrieren. Kinder, welche aufgrund ihrer Situation, Verfassung und k&ouml;rperlicher Ressourcen einen besonderen Betreuungsaufwand ben&ouml;tigen, werden so weit als m&ouml;glich durch eine zus&auml;tzliche Betreuungsperson w&auml;hrend des Programms begleitet. Bitte bei der Anmeldung im vorgesehenen Feld eine kurze Beschreibung der Beeintr&auml;chtigung einf&uuml;gen. Bei einem pers&ouml;nliches Gespr&auml;ch im Fr&uuml;hjahr werden alle weiteren Details gekl&auml;rt.</li>
+	</ul>
 </div>
 <div ng-show='type === "spiritnight"'>
 	<ol>
@@ -23,7 +36,7 @@
 </div>
 <div class='col-sm-12'>
 	<a ng-show="activityId === '1'" href='/#/' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
-	<a ng-show="activityId !== '1'" href='/#/registration/{{activityId}}?type={{type}}' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
+	<a ng-show="activityId !== '1'" href='/#/registration/{{eventId}}?type={{type}}' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
 </div>
 </div>
 <div ng-show="isKiso && lang == 'de'">
