--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -44,6 +44,12 @@
 											<input name='emailParent' type='email' ng-model='emailParent' required maxlength='200' class='form-control'></input>
 										</div>
 									</div>
+									<!-- <div class='form-group' ng-class='{ "has-error": registrationForm.emailParent.$invalid }'>
+											<label for='emailParentCheck' class='control-label col-sm-2'>{{"RESERVATION.LABEL_MAIL_PARENT_CHECK" | translate}}</label>
+											<div class='col-sm-8'>
+												<input name='emailParentChek' type='email' ng-model='emailParentCheck' required maxlength='200' class='form-control'></input>
+											</div>
+										</div> -->
 									<div ng-show='type === "summer" || type === "music" || type === "club" || type === "jumprun"' class='text-orange'><strong>{{"RESERVATION.HEADER_SUMMER_CHILD" | translate}}</strong></div>
 									<div ng-show='type === "spiritnight"' class='text-orange'><strong>{{"RESERVATION.HEADER_SPIRIT_CHILD" | translate}}</strong></div>
 									<!-- FIRSTNAMECHILD -->
@@ -113,6 +119,20 @@
 									<!-- <div ng-show='!isKiso && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4'>
 										<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>{{"RESERVATION.LABEL_PRECARE_CHILD" | translate}}</input>
 									</div> -->
+									<!-- HASDISABILITY -->
+									<div ng-show='(type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
+										<label for='hasDisability' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DISABILITY_CHILD" | translate}}</label>
+										<div class='col-sm-8'>
+											<input type='checkbox' name='hasDisability' ng-model='hasDisability'></input>
+										</div>
+									</div>
+									<!-- DISABILITYDESCRIPTION -->
+									<div ng-show='hasDisability && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
+										<label for='disabilityDescription' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DISABILITY_CHILD_DESCRIPTION" | translate}}</label>
+										<div class='col-sm-8'>
+											<input type='text' name='disabilityDescription' ng-model='disabilityDescription' maxlength='100' class='form-control'></input>
+										</div>
+									</div>
 									<br />
 									<div ng-show='type === "music"' class="panel panel-default">
 									<!-- JUNGBLÄSERWOCHE -->
@@ -226,8 +246,10 @@
 			<div id="collapseThree" ng-class="(currentState === 3) ? 'panel-collapse collapse in' : 'panel-collapse collapse'" role="tabpanel" aria-labelledby="headingThree">
 				<div class="panel-body">
 					<div class='col-sm-offset-2 col-sm4'>
-						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<a href='/#/agb/{{activityId}}?type={{type}}'>{{"RESERVATION.LABEL_TERMS2" | translate}}</a></strong></input>
+						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<a href='/#/agb/{{eventId}}?type={{type}}'>{{"RESERVATION.LABEL_TERMS2" | translate}}</a></strong></input>
 					</div>
+					<br />
+					<p class="bg-info" style='padding: 5px'>{{"RESERVATION.LABEL_REGISTRATION_PAY_INFO" | translate}}</p>
 							
 					<div class='col-sm-offset-2 col-sm-8' style='margin-top:15px;'>
 						<input class='btn btn-success bnt-lg btn-block' ng-click='save()' translate-attr="{value: 'RESERVATION.BUTTON_SUBMIT'}" ng-disabled='!isRegistrationAllowed()'>
