message when reservation is available

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -8,6 +8,11 @@
 		</div>
 	</div>
 
+	<div class='row bg-danger' style='padding: 10px'>
+		<h4>Anmeldung ist ab Montag 12.02 19:00 für alle Programme möglich</h4>
+	</div>
+	<br />
+
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
 
 	<ul class='list-group'>
