move agb to modal

--- a/public/templates/header/brand.html
+++ b/public/templates/header/brand.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="BrandCtrl" class='navbar-brand'>
     <div ng-show="patformSvc.isJDBL() || platformSvc.isJugendsommer()">
-		<a class='navbar-brand' href='http://www.jugenddienst.it/home_jd_bozen-land.html'>
+		<a class='navbar-brand' href='http://www.jdbl.it'>
 			<img src='assets/jd-logo.png' alt='Jugenddienst Bozen-Land' style='height:55px;'>
 		</a>
 	</div>
@@ -16,7 +16,7 @@
 		</a>
     </div>
     <div ng-show="platformSvc.isTest()">
-        <a href='http://www.jugenddienst.it/home_jd_bozen-land.html'>
+        <a href='http://www.jdbl.it'>
             <img src='assets/jd-logo.png' alt='Jugenddienst Bozen-Land' style='height:55px;'>
         </a>
     </div>
