--- a/public/templates/agbEdit.html
+++ b/public/templates/agbEdit.html
@@ -1,7 +1,9 @@
 <div class='container'>
+<div class='row'>
 <div ng-show="!isKiso">
-<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
+<h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
 <div ng-show='type === "summer" || type === "music" || type === "club"'>
+	<div class='col-sm-9'>
 	<ul>
 		<li>Nach erfolgreicher digitalen Anmeldung ist die Bezahlung verpflichtend. Zudem ist eine Abmeldung oder R&uuml;ckerstattung des Teilnehmerbetrages aus organisatorischen Gr&uumlnden nicht mehr m&ouml;glich. Krankheitsbedingt wird gegen Vorlage eines &auml;rztlichen Zeugnisses (innerhalb von 5 Tagen) die gesamte Teilnahmegeb&uuml;hr zurückerstattet.</li>
 		<li>Die Eltern bzw. Erziehungsberechtigten &uuml;bernehmen die Verantwortung für den Hin- und Rückweg des Kindes zu den jeweiligen Programmen. Untertags werden die Jugendlichen von den Betreuer/innen beaufsichtigt.</li>
@@ -10,8 +12,10 @@
 		<li>EINWILLIGUNG ZUR VER&Ouml;FFENTLICHUNG VON FOTOS UND VIDEOAUFNAHMEN: Wir informieren hiermit ausdr&uumlcklich, dass im Laufe der Sommerferienprogramme von den Teilnehmern Bilder in digitaler und herk&ouml;mmlicher Form  sowie Videoaufnahmen, von erm&auml;chtigten Mitarbeitern des Jugenddienstes gemacht werden und diese Bilder und Filme ausschließlich im Sinne der T&auml;tigkeit des Jugenddienstes, in Presseaussendungen, Internetauftritten und Bildershows verwendet, ver&ouml;ffentlicht und verbreitet werden. Mit seiner Zustimmung best&aumltigt der erm&auml;chtigte Elternteil, die hier angef&uuml;hrte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdr&uuml;cklich zu erm&auml;chtigen, die Bilder und Aufnahmen zu den besagten Zwecken, kostenlos zu verwenden.</li>
 		<li>DATENSCHUTZ: Mit der Anmeldung wird das Einverst&auml;ndnis zur allgemeinen Verarbeitung der pers&ouml;nlichen Daten im Rahmen der Verwaltung der Veranstaltung im Sinne der geltenden Datenschutzbestimmungen laut L.D. 196/2003 erteilt. Mitteilung im Sinne des Art. 13 des Legislativdekretes Nr. 196/03:S&auml;mtliche von Ihnen erhobenen Daten werden ausschließlich für interne Zwecke verarbeitet und für Rundschreiben sowie für die Erstellung der Teilnehmerlisten bei den Sommerferienprogrammen verwendet. Mit seiner Anmeldung best&auml;tigt der erm&auml;chtigte Elternteil/User, die hier angef&uml;hrte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdr&uuml;cklich zu erm&auml;chtigen, die pers&ouml;nlichen Daten zu den besagten Zwecken, zu verwenden.</li>
 	</ul>
+	</div>
 	<br />
-	<h2 class='text-orange'>Allgemeine Infos zu den Programmen:</h2>
+	<h2 class='text-orange col-sm-12'>Allgemeine Infos zu den Programmen:</h2>
+	<div class='col-sm-9'>
 	<ul>
 		<li>Verpflegung, Materialspesen, usw. sind im jeweiligen TeilnehmerInnen Preis enthalten (Die Preise stehen beim jeweiligen Programm dabei). Die Preise variieren nach Gemeinde/Programm, da die jeweiligen Gemeinden die Sommerprogramme unterschiedlich finanziell unterst&uumltzen.</li>
 		<li>TeilnehmerInnen d&uuml;rfen sich  grunds&auml;tzlich nur bei den Sommerprogrammen in ihrer Wohnsitzgemeinde anmelden. Ausnahmen bilden die Programme, die offen f&uuml;r alle sind. Diese Programme befinden sich im letzten Teil der Brosch&uumlre.</li>
@@ -22,8 +26,10 @@
 		<li>Die TeilnehmerInnen erhalten bei einer Spende von 10 Euro einen Jugenddienststick (4GB) mit allen Fotos des jeweiligen Programmes! Die Sticks d&uuml;rfen behalten werden! Es d&uuml;rfen auch Jugenddienststicks vom letzten Jahr verwendet werden. Diese m&uuml;ssen leer sein und am Anfang des jeweiligen Programmes den BetreuerInnen übergeben werden.</li>
 		<li>KINDER MIT BESONDEREM BETREUUNGSAUFWAND: Dem Jugenddienst Bozen-Land ist es ein großes Anliegen auch Kinder mit k&ouml;rperlicher/geistiger Beeintr&auml;chtigung in die Programme zu integrieren. Kinder, welche aufgrund ihrer Situation, Verfassung und k&ouml;rperlicher Ressourcen einen besonderen Betreuungsaufwand ben&ouml;tigen, werden so weit als m&ouml;glich durch eine zus&auml;tzliche Betreuungsperson w&auml;hrend des Programms begleitet. Bitte bei der Anmeldung im vorgesehenen Feld eine kurze Beschreibung der Beeintr&auml;chtigung einf&uuml;gen. Bei einem pers&ouml;nliches Gespr&auml;ch im Fr&uuml;hjahr werden alle weiteren Details gekl&auml;rt.</li>
 	</ul>
+	</div>
 </div>
 <div ng-show='type === "spiritnight"'>
+	<div class='col-sm-9'>
 	<ol>
 		<li>Die Begleitpersonen sind für die Firmlinge w&auml;hrend der gesamten Veranstaltung verantwortlich.</li>
 		<li>Versicherung: Alle Teilnehmer/innen sind über die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert; Achtung nicht Unfall versichert.</li>
@@ -33,11 +39,12 @@
 		<li>Der Start der Spiritnight ist pünktlich um 16.30 Uhr. Bitte um pünktliches Erscheinen.</li>
 		<li>Die Hin- und R&uuml;ckfahrt muss eigenst&auml;ndig von jeder Pfarrei organisiert werden.</li>
 	</ol>
+	</div>
 </div>
-<div class='col-sm-12'>
+<!-- <div class='col-sm-9'>
 	<a ng-show="activityId === '1'" href='/#/' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
 	<a ng-show="activityId !== '1'" href='/#/registration/{{eventId}}?type={{type}}' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
-</div>
+</div> -->
 </div>
 <div ng-show="isKiso && lang == 'de'">
 	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
@@ -80,10 +87,10 @@
 			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die MitarbeiterInnen des Jugenddienst Bozen gerne zur Verfügung.</p>
 		</li>
 	</ol>
-	<div class='col-sm-12'>
+	<!-- <div class='col-sm-12'>
 		<a ng-show="activityId === '1'" href='/#/' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
 		<a ng-show="activityId !== '1'" href='/#/registration/{{activityId}}?type={{type}}' class='btn btn-warning' role='button'>Zur&uuml;ck</a>
-	</div>
+	</div> -->
 </div>
 <div ng-show="isKiso && lang == 'it'">
 	<h2 class='text-orange'>Condizioni e termini</h2>
@@ -125,9 +132,10 @@
 			<p>Con l’iscrizione il genitore si dichiara d’accordo con le condizioni sopra citate. Per ulteriori chiarimenti si prega di non esitare a consultare i collaboratori dello Jugenddienst Bozen.</p>
 		</li>
 	</ol>
-	<div class='col-sm-12'>
+	<!-- <div class='col-sm-12'>
 		<a ng-show="activityId === '1'" href='/#/' class='btn btn-warning' role='button'>indietro</a>
 		<a ng-show="activityId !== '1'" href='/#/registration/{{eventId}}?type={{type}}' class='btn btn-warning' role='button'>indietro</a>
-	</div>
+	</div> -->
+</div>
 </div>
 </div>
