show registration warning only till certain date

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 
-	<div class='row bg-danger' style='padding: 10px'>
+	<div class='row bg-danger' style='padding: 10px' ng-show='isRegistrationWarningVisible()'>
 		<h4>Anmeldung ist ab Montag 12.02 19:00 für alle Programme möglich</h4>
 	</div>
 	<br />
