--- a/public/templates/header/brand.html
+++ b/public/templates/header/brand.html
@@ -10,8 +10,8 @@
 			<img src='assets/jd-logo.png' alt='kiso' style='height:55px;'>
 		</a>
 	</div>
-	<div ng-show="platformSvc.isKiso()">
-		<a class='navbar-brand' href='http://www.jugenddienst.it/Jugenddienst_Bozen.html'>
+	<div ng-show="platformSvc.isJDUL()">
+		<a class='navbar-brand' href='https://www.jugenddienst/unterland'>
 			<img src='assets/jd-logo.png' alt='Jugenddienst Bozen' style='height:55px;'>
 		</a>
     </div>
