--- a/public/templates/info/info.html
+++ b/public/templates/info/info.html
@@ -1,4 +1,4 @@
-<div ng-show="platform.isJDBL()"><div ng-include src="'info-jdbl.html'"></div></div>
+<div ng-show="platform.isJDBL()"><div ng-include src="'templates/info/info-jdbl.html'"></div></div>
 
 <div ng-show="platform.isKiso() && lang == 'de'"><div ng-include src="'templates/info/info-kiso-de.html'"></div></div>
 <div ng-show="platform.isKiso() && lang == 'it'"><div ng-include src="'templates/info/info-kiso-it.html'"></div></div>
