--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -250,15 +250,17 @@
 					
 					<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   						<div class="modal-dialog modal-lg" role="document">
-							<div class="modal-header" style='background-color: white'>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-								<h4 class="modal-title">Information</h4>
-							</div>
-    						<div class="modal-content">
-								<div ng-include src='"templates/agbEdit.html"'></div>
-							</div>
-							<div class="modal-footer" style='background-color:white'>
-								<button type="button" class="close btn btn-warning" data-dismiss="modal" aria-label="Close">Zur&uuml;ck</button>
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+									<h4 class="modal-title">Information</h4>
+								</div>
+    							<div class="modal-content">
+									<div ng-include src='"templates/agbEdit.html"'></div>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="close btn btn-warning" data-dismiss="modal" aria-label="Close">Zur&uuml;ck</button>
+								</div>
 							</div>
   						</div>
 					</div>
